# psylio-script

./: .gitignore  compile-script.sh  main.py  main2.py  psylio.ipynb  psylio.py  pyproject.toml  requirements.txt  run.sh  unpaid.csv
psylio/appointments/: __init__.py  appointments.py
psylio/auth/: __init__.py  auth.py
psylio/invoices/: __init__.py  close.py  create.py  fetch.py  io.py
psylio/records/: __init__.py  records.py
psylio/routes/: __init__.py  routes.py
psylio/utils/: __init__.py  utils.py
utils/: appointments.py  auth.py  invoices.py  io.py  records.py
