[tool.poetry]
name = "psylio-script"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <fdl9044@gmail.com>"]
readme = "README.md"
packages = [{include = "psylio_script"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
pandas = "^1.5.3"
streamlit = "^1.20.0"
selenium = "^4.8.2"
tqdm = "^4.65.0"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
